feat: Implementa soft delete para usuários e realiza refatoração
Adiciona a lógica de soft delete na entidade Usuario com @SQLDelete e @Where. Refatora injeção de dependência para usar construtor em vez de @Autowired. Atualiza chamadas de métodos depreciados.